[gd_scene load_steps=7 format=3 uid="uid://ctq3sn58sqv0a"]

[ext_resource type="Script" uid="uid://3otrxatdx02a" path="res://Scripts/MainMenuController.gd" id="1_853f1"]
[ext_resource type="Texture2D" uid="uid://cpdlgoedufa7v" path="res://Images/cave2.png" id="2_8saeu"]
[ext_resource type="FontFile" uid="uid://8sb14cf5coaj" path="res://Fonts/AbCave-Oq2O.ttf" id="2_ghw46"]
[ext_resource type="FontFile" uid="uid://dl41eknerpcmm" path="res://Fonts/AgreementSignature-qZX6x.ttf" id="4_df05h"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_ghw46"]
bg_color = Color(0, 0, 0, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_df05h"]
bg_color = Color(0, 0, 0, 1)

[node name="MainMenu" type="Node2D"]
script = ExtResource("1_853f1")

[node name="Panel" type="Panel" parent="."]
offset_left = -53.0
offset_top = -37.0
offset_right = 1003.0
offset_bottom = 658.0
theme_override_styles/panel = SubResource("StyleBoxFlat_ghw46")

[node name="Label" type="Label" parent="Panel"]
layout_mode = 0
offset_left = 398.0
offset_top = 72.0
offset_right = 596.0
offset_bottom = 171.0
theme_override_fonts/font = ExtResource("2_ghw46")
theme_override_font_sizes/font_size = 96
text = "Caver"

[node name="VBoxContainer" type="VBoxContainer" parent="Panel"]
layout_mode = 0
offset_left = 654.0
offset_top = 293.0
offset_right = 897.0
offset_bottom = 532.0

[node name="StartButton" type="Button" parent="Panel/VBoxContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_font_sizes/font_size = 25
theme_override_styles/normal = SubResource("StyleBoxFlat_df05h")
text = "Start"

[node name="OptionsButton" type="Button" parent="Panel/VBoxContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_font_sizes/font_size = 25
theme_override_styles/normal = SubResource("StyleBoxFlat_df05h")
text = "Options"

[node name="ExitButton" type="Button" parent="Panel/VBoxContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_font_sizes/font_size = 25
theme_override_styles/normal = SubResource("StyleBoxFlat_df05h")
text = "Exit"

[node name="TextureRect" type="TextureRect" parent="Panel"]
layout_mode = 0
offset_left = 213.0
offset_top = 184.0
offset_right = 513.0
offset_bottom = 484.0
texture = ExtResource("2_8saeu")

[node name="Label2" type="Label" parent="Panel"]
layout_mode = 0
offset_left = 859.0
offset_top = 594.0
offset_right = 988.0
offset_bottom = 630.0
theme_override_fonts/font = ExtResource("4_df05h")
theme_override_font_sizes/font_size = 28
text = "By Harmadillo"

[connection signal="pressed" from="Panel/VBoxContainer/StartButton" to="." method="_on_start_button_pressed"]
[connection signal="pressed" from="Panel/VBoxContainer/OptionsButton" to="." method="_on_options_button_pressed"]
[connection signal="pressed" from="Panel/VBoxContainer/ExitButton" to="." method="_on_exit_button_pressed"]
